# radio_collar_tracker_gcs

./: .environment.yml.un~  .gitignore  .pylintrc  Doxyfile  Makefile.am  Pipfile  README.md  conda-linux-64.lock.yml  conda-lock.yml  conda-osx-64.lock.yml  conda-osx-arm64-lock.yml  conda-win-64-lock.yml  conda-win-64.lock.yml  configure.ac  doxypypy_filter  environment.yml  environment.yml~  osmtest.py  pyproject.toml  rctGCS.bat  rctGCS.sh  rct_gcs.code-workspace  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: osx64_pytest.yml  ubuntu_pytest.yml  windows_pytest.yml
RctGcs/: config.py  droneSimulator.py  gcsConfig.ini  ping.py  rctCore.py  rctGCS.py  utils.py
RctGcs/ui/: controls.py  display.py  map.py  option_vars.py  popups.py  widgets.py
doc/: rct_manual.tex
gui_tests/: conftest.py  test_connection_dialog.py  test_gui.py
scripts/: .data.json.un~  .droneSimulator.py.un~  .ping.py.un~  .project  .rctComms.py.un~  .rctCore.py.un~  .rctGCS.py.un~  Makefile.am  README.md  antenna_model.ipynb  circle.py  config.py  data.json  droneSimulator.py  droneSimulator.py~  gcsconfig.json  index.html  ping.py  ping.py~  pings.dbf  pings.shp  pings.shx  rctComms.py  rctCore.py  rctCore.py~  rctGCS.launch  rctGCS.py  rctGCS.py~  rctTest.py  rctTransport.py  testSampling.py  version.py
scripts/holder/: PRECISION_17.350_heatmap.tiff  PRECISION_17.350_heatmap.tiff.aux.xml  line.tiff
scripts/ui/: collapseFrame.py  controls.py  display.py  map.py  popups.py  warnings.py
tests/: test_configuration.py  test_imports.py
